--- a/src/main/resources/rfc_destination/keyfoundry_dev.properties
+++ b/src/main/resources/rfc_destination/keyfoundry_dev.properties
@@ -1,15 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-jco.destination.DESTINATION_ALIASES=TEST,KEYFOUNDRY_DEV
-
-# 1st Open Test Account
-jco.client.sysnr.TEST=30
-jco.client.user.TEST=SAPRFC01
-jco.client.passwd.TEST=40B3BB7E3E53D082F6E8E8DFA12B4C3C
-jco.client.client.TEST=550
-jco.client.ashost.TEST=192.168.191.18
-jco.client.lang.TEST=ko
-jco.destination.peak_limit.TEST=5
-jco.destination.pool_capacity.TEST=10
+jco.destination.DESTINATION_ALIASES=KEYFOUNDRY_DEV,TEST
 
 jco.client.sysnr.KEYFOUNDRY_DEV=00
 jco.client.user.KEYFOUNDRY_DEV=SAPRFC01
@@ -19,3 +9,12 @@ jco.client.ashost.KEYFOUNDRY_DEV=192.168.139.150
 jco.client.lang.KEYFOUNDRY_DEV=ko
 jco.destination.peak_limit.KEYFOUNDRY_DEV=5
 jco.destination.pool_capacity.KEYFOUNDRY_DEV=10
+
+jco.client.sysnr.TEST=30
+jco.client.user.TEST=SAPRFC01
+jco.client.passwd.TEST=40B3BB7E3E53D082F6E8E8DFA12B4C3C
+jco.client.client.TEST=550
+jco.client.ashost.TEST=192.168.191.18
+jco.client.lang.TEST=ko
+jco.destination.peak_limit.TEST=5
+jco.destination.pool_capacity.TEST=10
