--- a/src/main/resources/rfc_destination/local_dev.properties
+++ b/src/main/resources/rfc_destination/local_dev.properties
@@ -1,15 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
-jco.destination.DESTINATION_ALIASES=TEST,KEYFOUNDRY_DEV
+jco.destination.DESTINATION_ALIASES=KEYFOUNDRY_DEV,TEST
 
 # 1st Open Test Account
-jco.client.sysnr.TEST=30
-jco.client.user.TEST=SAPRFC01
-jco.client.passwd.TEST=40B3BB7E3E53D082F6E8E8DFA12B4C3C
-jco.client.client.TEST=550
-jco.client.ashost.TEST=192.168.191.18
-jco.client.lang.TEST=ko
-jco.destination.peak_limit.TEST=5
-jco.destination.pool_capacity.TEST=10
 
 jco.client.sysnr.KEYFOUNDRY_DEV=00
 jco.client.user.KEYFOUNDRY_DEV=SAPRFC01
@@ -19,6 +11,15 @@ jco.client.ashost.KEYFOUNDRY_DEV=192.168.139.150
 jco.client.lang.KEYFOUNDRY_DEV=ko
 jco.destination.peak_limit.KEYFOUNDRY_DEV=5
 jco.destination.pool_capacity.KEYFOUNDRY_DEV=10
+
+jco.client.sysnr.TEST=30
+jco.client.user.TEST=SAPRFC01
+jco.client.passwd.TEST=40B3BB7E3E53D082F6E8E8DFA12B4C3C
+jco.client.client.TEST=550
+jco.client.ashost.TEST=192.168.191.18
+jco.client.lang.TEST=ko
+jco.destination.peak_limit.TEST=5
+jco.destination.pool_capacity.TEST=10
 
 # sysnr : SAP \uC2DC\uC2A4\uD15C \uBC88\uD638
 # user : \uB85C\uADF8\uC628 \uC0AC\uC6A9\uC790
